--- a/styles.css
+++ b/styles.css
@@ -1,51 +1,43 @@
+/* logo */
 .logo {
 text-decoration:none ;
-/* font-size: 26px;
-font-weight: bold; */
 }
 
 .logo-blue {
 color: #2196F3;
+font-family: Raleway;
 font-size: 26px;
 font-weight: bold;
+line-height: 1.19;
+font-style: normal;
 
 }
 .logo-black {
   color: #000000;
+  font-family: Raleway;
   font-size: 26px;
   font-weight: bold;
+  line-height: 1.19;
+  font-style: normal;
 }
 
-
-.portfolio{
-  color: #000000;
-  font-size: 14px;
-  text-decoration: none;
-}
-
-.contacts{
-  color: #000000;
-  font-size: 14px;
-  text-decoration: none;
-}
-
-.ul-link {
+/* site-nav */
+.site-nav {
   list-style: none;
 }
 
-.studio {
-  color: #2196F3;
+.site-nav .link{
+  color:#000000;
+  font-family: Roboto;
   font-size: 14px;
+  font-weight: 500;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+
   text-decoration: none;
 }
-.studio:hover,
-.studio:focus {
-  color: aquamarine;
-}
 
-.portfolio:hover {
-  color: aquamarine;
-}
-.contacts:hover {
-  color: aquamarine;
+.site-nav .link:hover,
+.site-nav .link:focus {
+  color: #2196F3;
 }
