--- a/styles.css
+++ b/styles.css
@@ -27,17 +27,72 @@ font-style: normal;
 }
 
 .site-nav .link{
-  color:#000000;
+  color:#212121;
   font-family: Roboto;
   font-size: 14px;
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
-
   text-decoration: none;
 }
 
 .site-nav .link:hover,
 .site-nav .link:focus {
   color: #2196F3;
+}
+
+.hero-title
+
+.section-title{
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+  letter-spacing: 0.03em; 
+}
+
+/* address link */
+.address {
+  list-style: none; 
+  }
+
+.address a {
+  text-decoration: none;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: #757575;
+}
+
+.address a:hover,
+.address a:focus {
+ color:#2196F3;
+}
+
+/* main section */
+/* babber */
+
+.hero {
+  background: url("./Images/banner.jpg");
+  width: 1600px;
+  height: 600px;
+}
+
+.hero .hero-title {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+/* or 136% */
+
+text-align: center;
+letter-spacing: 0.06em;
+text-transform: uppercase;
+color: #FFFFFF;
 }
