--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,19 @@
+:root {
+  --primary-text-color:#212121;
+  --title-text-color: #000000;
+  --accent-color: #2196F3;
+  --secondary-color:#757575;
+  --primary-white-color:#FFFFFF;
+}
+
+
 /* logo */
 .logo {
 text-decoration:none ;
 }
 
 .logo-blue {
-color: #2196F3;
+color: var(--accent-color);
 font-family: Raleway;
 font-size: 26px;
 font-weight: bold;
@@ -26,8 +35,12 @@ font-style: normal;
   list-style: none;
 }
 
+.site-nav .link.current{
+  color:var(--accent-color);
+  /* text-decoration: none; */
+}
 .site-nav .link{
-  color:#212121;
+  color:var(--main-color);
   font-family: Roboto;
   font-size: 14px;
   font-weight: 500;
@@ -38,20 +51,11 @@ font-style: normal;
 
 .site-nav .link:hover,
 .site-nav .link:focus {
-  color: #2196F3;
+  color:var(--accent-color);
 }
 
-.hero-title
 
-.section-title{
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.16;
-  text-align: center;
-  letter-spacing: 0.03em; 
-}
+
 
 /* address link */
 .address {
@@ -66,12 +70,12 @@ font-style: normal;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
-  color: #757575;
+  color: var(--secondary-color);
 }
 
 .address a:hover,
 .address a:focus {
- color:#2196F3;
+ color:var(--accent-color);
 }
 
 /* main section */
@@ -96,3 +100,174 @@ letter-spacing: 0.06em;
 text-transform: uppercase;
 color: #FFFFFF;
 }
+
+.button {
+  background: var(--accent-color);
+  color: var(--primary-white-color);
+  text-align: center;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  text-decoration:none;
+  position: absolute; 
+/* identical to box height, or 187% */
+  letter-spacing: 0.06em;
+}
+
+/* section how it work */
+
+.section-title {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+  letter-spacing: 0.03em; 
+  color: var(--primary-text-color)
+}
+
+.ul-style{
+  list-style: none;
+}
+.subtitle{
+  font-family: Roboto;
+font-style: normal;
+font-weight: 700;
+font-size: 14px;
+line-height: 1.14;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+color: var(--primary-text-color);
+}
+
+.how-work{
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+/* or 171% */
+  letter-spacing: 0.03em;
+  color: var(--secondary-color);
+}
+
+/* Чим ми займаємось */
+.name-work{
+  background: rgba(47, 48, 58, 0.8);
+  border-radius: 0px 0px 4px 4px;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.15;
+   letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--primary-white-color);
+}
+
+/* Наша команда */
+
+.worker {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
+  color: var(--primary-text-color);
+}
+
+.profession {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
+  color: var(--secondary-color);
+}
+
+.icons{
+  text-decoration: none;
+  color: var(--secondary-color);
+}
+
+.icons:hover,
+.icons:focus{
+  color: var(--accent-color)
+}
+
+/* постійні клієнти */
+.regular-custumers:hover,
+.regular-custumers:focus{
+  color: var(--accent-color);
+}
+
+.join{
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  background: var(--primary-text-color);
+}
+
+.end {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 2;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.4);
+  background: var(--primary-text-color);
+}
+
+
+/* portfolio */
+.button-radio{
+  background: #f5f4fa;
+  color: var(--primary-text-color);
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  letter-spacing: 0.03em;
+  text-decoration: none;
+}
+
+.button-radio:hover,
+.button-radio:focus{
+  color: var(--accent-color);
+}
+
+
+ .name-post{
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  color: var(--primary-text-color);
+ }
+
+
+ .post-about{
+   font-family: Roboto;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.03em;
+  color: var(--secondary-color);
+
+ }
