--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ font-style: normal;
 
 }
 .logo-black {
-  color: #000000;
+  color: var(--title-text-color);
   font-family: Raleway;
   font-size: 26px;
   font-weight: bold;
@@ -31,14 +31,14 @@ font-style: normal;
 }
 
 /* site-nav */
-.site-nav {
-  list-style: none;
-}
+/* .site-nav {
+  list-style: none; }*/
+
 
 .site-nav .link.current{
-  color:var(--accent-color);
-  /* text-decoration: none; */
+  color: var(--accent-color);
 }
+
 .site-nav .link{
   color:var(--main-color);
   font-family: Roboto;
@@ -56,11 +56,9 @@ font-style: normal;
 
 
 
-
-/* address link */
-.address {
+/* .address {
   list-style: none; 
-  }
+  } */
 
 .address a {
   text-decoration: none;
@@ -92,13 +90,11 @@ font-style: normal;
   font-style: normal;
   font-weight: 900;
   font-size: 44px;
-  line-height: 1.36;
-/* or 136% */
-
-text-align: center;
-letter-spacing: 0.06em;
-text-transform: uppercase;
-color: #FFFFFF;
+  line-height: 1.36 ;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  color: var(--primary-white-color);
 }
 
 .button {
@@ -110,9 +106,7 @@ color: #FFFFFF;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
-  text-decoration:none;
-  position: absolute; 
-/* identical to box height, or 187% */
+  text-decoration: none;
   letter-spacing: 0.06em;
 }
 
@@ -206,6 +200,18 @@ color: var(--primary-text-color);
   color: var(--accent-color);
 }
 
+.addres-street{
+font-family: Roboto;
+font-style: normal;
+font-weight: 400;
+font-size: 14px;
+line-height: 1.71 ;
+letter-spacing: 0.03em;
+color: var(--primary-white-color);
+background: var(--primary-text-color);
+}
+
+
 .join{
   font-family: Roboto;
   font-style: normal;
@@ -217,6 +223,7 @@ color: var(--primary-text-color);
   color: #FFFFFF;
   background: var(--primary-text-color);
 }
+
 
 .end {
   font-family: Roboto;
