--- a/styles.css
+++ b/styles.css
@@ -6,37 +6,27 @@
   --primary-white-color:#FFFFFF;
 }
 
-
 /* logo */
 .logo {
 text-decoration:none ;
-}
-
-.logo-blue {
-color: var(--accent-color);
+color:var(--accent-color);
+text-decoration:none;
 font-family: Raleway;
 font-size: 26px;
 font-weight: bold;
 line-height: 1.19;
-font-style: normal;
-
+font-style: normal ;
 }
+
+
 .logo-black {
-  color: var(--title-text-color);
-  font-family: Raleway;
-  font-size: 26px;
-  font-weight: bold;
-  line-height: 1.19;
-  font-style: normal;
+color:var(--title-text-color);
 }
 
 /* site-nav */
-/* .site-nav {
-  list-style: none; }*/
-
 
 .site-nav .link.current{
-  color: var(--accent-color);
+  color:var(--accent-color);
 }
 
 .site-nav .link{
@@ -55,10 +45,7 @@ font-style: normal;
 }
 
 
-
-/* .address {
-  list-style: none; 
-  } */
+/* address header */
 
 .address a {
   text-decoration: none;
@@ -68,7 +55,7 @@ font-style: normal;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
-  color: var(--secondary-color);
+  color:var(--secondary-color);
 }
 
 .address a:hover,
@@ -77,41 +64,38 @@ font-style: normal;
 }
 
 /* main section */
-/* babber */
+/* banner */
 
 .hero {
   background: url("./Images/banner.jpg");
   width: 1600px;
   height: 600px;
+  font-family: Roboto;
+  text-align: center;
+  font-style: normal;
+  letter-spacing: 0.06em;
 }
 
 .hero .hero-title {
-  font-family: Roboto;
-  font-style: normal;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36 ;
-  text-align: center;
-  letter-spacing: 0.06em;
   text-transform: uppercase;
-  color: var(--primary-white-color);
+  color:var(--primary-white-color);
 }
 
-.button {
+.hero .button {
   background: var(--accent-color);
   color: var(--primary-white-color);
-  text-align: center;
-  font-family: Roboto;
-  font-style: normal;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
   text-decoration: none;
-  letter-spacing: 0.06em;
 }
 
 /* section how it work */
 
+/* Стилі для H2*/
 .section-title {
   font-family: Roboto;
   font-style: normal;
@@ -122,19 +106,24 @@ font-style: normal;
   letter-spacing: 0.03em; 
   color: var(--primary-text-color)
 }
+/* --------------------- */
 
+/* відключає стилі UL */
 .ul-style{
   list-style: none;
 }
+/* --------------------- */
+
+
 .subtitle{
   font-family: Roboto;
-font-style: normal;
-font-weight: 700;
-font-size: 14px;
-line-height: 1.14;
-letter-spacing: 0.03em;
-text-transform: uppercase;
-color: var(--primary-text-color);
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--primary-text-color);
 }
 
 .how-work{
@@ -143,10 +132,10 @@ color: var(--primary-text-color);
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
-/* or 171% */
   letter-spacing: 0.03em;
   color: var(--secondary-color);
 }
+/* ----------------------------- */
 
 /* Чим ми займаємось */
 .name-work{
@@ -161,26 +150,25 @@ color: var(--primary-text-color);
   text-transform: uppercase;
   color: var(--primary-white-color);
 }
+/* -------------------------------- */
 
 /* Наша команда */
-
-.worker {
-  font-family: Roboto;
+.our-team {
+ font-family: Roboto;
   font-style: normal;
-  font-weight: 500;
+  letter-spacing: 0.03em;
   font-size: 16px;
   line-height: 1.19;
-  letter-spacing: 0.03em;
+}
+
+.worker {
+  font-weight: 500;
+  font-size: 16px;
   color: var(--primary-text-color);
 }
 
 .profession {
-  font-family: Roboto;
-  font-style: normal;
   font-weight: 400;
-  font-size: 16px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
   color: var(--secondary-color);
 }
 
@@ -193,13 +181,17 @@ color: var(--primary-text-color);
 .icons:focus{
   color: var(--accent-color)
 }
+/* ----------------------- */
+
 
 /* постійні клієнти */
 .regular-custumers:hover,
 .regular-custumers:focus{
   color: var(--accent-color);
 }
+/* -------------------------- */
 
+/* footer */
 .addres-street{
 font-family: Roboto;
 font-style: normal;
@@ -210,8 +202,9 @@ letter-spacing: 0.03em;
 color: var(--primary-white-color);
 background: var(--primary-text-color);
 }
+/* ----------------------------------- */
 
-
+/* Join */
 .join{
   font-family: Roboto;
   font-style: normal;
@@ -223,8 +216,9 @@ background: var(--primary-text-color);
   color: #FFFFFF;
   background: var(--primary-text-color);
 }
+/* ------------------------------------- */
 
-
+/* end */
 .end {
   font-family: Roboto;
   font-style: normal;
@@ -236,8 +230,11 @@ background: var(--primary-text-color);
   color: rgba(255, 255, 255, 0.4);
   background: var(--primary-text-color);
 }
+/* ---------------------end index.html */
 
 
+
+/* start portfolio.html */
 /* portfolio */
 .button-radio{
   background: #f5f4fa;
