--- a/styles.css
+++ b/styles.css
@@ -277,3 +277,14 @@ background: var(--primary-text-color);
   color: var(--secondary-color);
 
  }
+
+ .kryak{
+  background: rgba(33, 150, 243, 0.9);;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+  color: #FFFFFF;
+ }
