--- a/css/styles.css
+++ b/css/styles.css
@@ -69,7 +69,7 @@ color:var(--title-text-color);
 /* banner */
 
 .hero {
-  background: url("./Images/banner.jpg");
+  background: url("/Images/banner.jpg");
   width: 1600px;
   height: 600px;
   font-family: Roboto;
